[187] Shashank | Sonar issue fix due to java 17